welcome.lessons.welcome.array.array123.Array123.scala.error
array123:2: error: value ==- is not a member of Int
	if( indexOfValue(nums,2)==-1){
                                ^array123:5: error: value !=- is not a member of Int
	if(indexOfValue(nums,2)!=-1 && nums(i-1)==1 && nums(i+1)==3){
                               ^